# paperbuddy

./: .gitignore  README.md  app.py  crew.py  main.py  pyproject.toml
config/: agents.yaml  tasks.yaml
data/chroma/143e5bf1-cbb4-44e7-bb6f-cd04f600e0a3/: index_metadata.pickle
data/chroma/fdcfec9f-3e30-46fc-a836-953e65a3428d/: index_metadata.pickle
rag/: index.py
src/: crew_demo.py
src/paperbuddy/: crew.py
src/paperbuddy/agents/: coordinator.py
src/paperbuddy/api/: app.py
src/paperbuddy/indexing/: indexing.py
src/paperbuddy/rag/: index.py
src/paperbuddy/tools/: pdf_parse.py  vector_search.py  vector_search_tool.py
src/tools/: vector_search.py
